--- a/dome.html
+++ b/dome.html
@@ -24,10 +24,10 @@
   <script src="include/dome-tricks.js"></script>
 
   <!-- load ( when opening as a local html file without running apache, we cannot load json files with XMLhttprequest, thus we use this method instead ) -->
-  <script src="drumcorps_ourtreasure/data.json.js"></script>
+  <!--<script src="drumcorps_ourtreasure/data.json.js"></script>-->
   <script>
     // CONFIG
-    var dataset = "drumcorps_ourtreasure"
+    var dataset = "data/drumcorps_ourtreasure"
     // Initialize
     window.onload = domeload_directory(dataset)
   </script>
